--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -80,40 +80,18 @@ jobs:
 
           $env:TOKEN = "${{ steps.auth.outputs.access_token }}"
 
-         # Set your GitHub repository information
-          $repositoryOwner = "veenakumari.kummari@easystepin.com"
-          $repositoryName = "apigee-X-KVM"
-          $branchName = "main"
-          
-          # Clone the repository
-          git clone https://github.com/Veenakumarikummari/apigee-X-KVM.git
-          cd apigee-X-KVM
-          
-           
-          
-          # Read JSON files
-          jsonFiles = apiconfig/env/eval/kvms.json -Recurse
-          jsonContent = Get-Content -Path jsonFiles -Raw
-          $apiUrl = "https://apigee.googleapis.com/v1/organizations/esi-apigee-x-394004/environments/eval/keyvaluemaps"
-          $headers = @{
-          	"Authorization" = "Bearer "${{ steps.auth.outputs.access_token }}""
-          	"Content-Type" = "application/json"
-          }
-         
-         
-         
-         $response = Invoke-RestMethod -Uri $apiUrl -Method Post -Headers $headers -Body jsonContent
-         
-         
-         
-         Write-Host "uploded"
-  
-   
+          Invoke-Pester -Path .\scripts.ps1 -Passthru
+
+ 
 
       - name: Remove GCP Credentials JSON File
 
         run: rm gha-creds*.json
-          github_token: ${{ secrets.PAT_TOKEN }}
 
+ 
+
+  
+
+  
 
  
